--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<head>
+	<title>Learning React</title>
     <script src="build/react.js"></script>
     <script src="build/JSXTransformer.js"></script>
-  </head>
-  <body>
-    <div id="example"></div>
-    <script type="text/jsx">
-      React.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('example')
-      );
-    </script>
-  </body>
-</html>
+	<script src="./todo.js"></script>
+</head>
+<body>
+	<div id="container">
+	    <!-- This element's contents will be replaced with your component. -->
+	</div>
+</body>
