add script type

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Learning React</title>
     <script src="build/react.js"></script>
     <script src="build/JSXTransformer.js"></script>
-	<script src="./todo.js"></script>
+	<script type="text/jsx" src="./todo.js"></script>
 </head>
 <body>
 	<div id="container">
